# pico-zephyr

./: .gitignore  CMakeLists.txt  README.md  west.yml
app/: CMakeLists.txt  prj.conf
app/src/: main.c
blinky/: .gitignore  CMakeLists.txt  prj.conf
blinky/src/: main.c
scripts/: README.md  _lib.sh  build.ps1  build.sh  build_scripts.sh  build_template.sh  flash.sh  maximal_setup.sh  minimal_setup.sh  setup.ps1  setup.sh  setup_openocd.sh  setup_openocd_linux.sh  setup_openocd_win.sh  setup_openocd_windows.ps1  setup_zephyr_full.ps1  setup_zephyr_full.sh  setup_zephyr_minimal.ps1  setup_zephyr_minimal.sh  uninstall.ps1  uninstall.sh  vscode_setup.ps1  vscode_setup.sh
setup/: maximal_setup.sh  minimal_setup.sh
snippets/usb_serial_port/: README.md  snippet.yml  usb_serial_port.conf  usb_serial_port.overlay
usb_serial_port/: usb_serial_port.conf
wifi/: .gitignore  CMakeLists.txt  prj.conf
wifi/src/: http.h  json_definitions.h  main.c  wifi.h
wifi_example/: CMakeLists.txt  prj.conf
wifi_example/src/: http.c  http.h  json_definitions.h  main.c  ping.c  ping.h  wifi.c
